# writings

./: README.md
beginner/: first_gstreamer.c  first_python.py  second_gstreamer.c  second_python.py
filter_c/: compile_filter.sh  gstbasicoverlay.c  gstbasicoverlay.h  testelement.c
filter_py/: testelement.py
filter_py/python/: gstbasicoverlaypy.py
gobject_oop_c/: compile.sh
gobject_oop_c/basic/: myclass.c  myclass.h
repo/automake/gobject-0.1/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  testclass.conf
repo/automake/gobject-0.1/debian/: README.Debian  README.source  autoreconf.after  autoreconf.before  changelog  control  files  gobject.cron.d.ex  gobject.substvars  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
repo/automake/gobject-0.1/debian/.debhelper/gobject/: dbgsym-build-ids
repo/automake/gobject-0.1/debian/.debhelper/gobject/dbgsym-root/DEBIAN/: control  md5sums
repo/automake/gobject-0.1/debian/gobject/DEBIAN/: control  md5sums
repo/automake/gobject-0.1/debian/gobject/usr/share/doc-base/: gobject.gobject
repo/automake/gobject-0.1/src/: myclass.h  testclass  testclass.c
repo/cmake/gobject-0.1/: CMakeLists.txt
repo/gobject-test/: compile.sh  myclass.c
repo/gobject-test/DEBIAN/: control
repo/meson/gobject-test-0.1/: meson.build
repo/meson/gobject-test-0.1/src/: .ninja_deps  .ninja_log
repo/python/: pyaptrepo.py
source_element/: compile.sh  gstmyjpegstreamer.c  gstmyjpegstreamer.h
(+2 files in other folders)
